--- a/.github/workflows/html-mediaALL_a.yml
+++ b/.github/workflows/html-mediaALL_a.yml
@@ -42,6 +42,6 @@ jobs:
       - name: Commit and push csv files
         run: |
           git add .
-          git commit -m "Update csv files"
+          git commit -m "Update csv files - $(date +'%Y-%m-%d')"
           git push
         working-directory: ${{ github.workspace }}
