--- a/.github/workflows/awsPush.yml
+++ b/.github/workflows/awsPush.yml
@@ -17,7 +17,7 @@ jobs:
 
       - name: Upload New Files to AWS S3
         run: |
-          aws s3 sync --exact-timestamps --size-only ./html-pickup_${{ env.yyyymm }} s3://html-pickup/${{ env.yyyymm }}
+          aws s3 sync --exact-timestamps --size-only ./html-pickup_202308 s3://html-pickup }}
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
