--- a/.github/workflows/awsPush.yml
+++ b/.github/workflows/awsPush.yml
@@ -10,6 +10,12 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 0 # リポジトリの完全な履歴を取得
+          
+      - name: Configure AWS CLI
+      run: |
+        aws configure set aws_access_key_id ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws configure set aws_secret_access_key ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws configure set default.region ap-northeast-1    
 
       # UTC（協定世界時）時間で現在の日付からyyyymmを動的に設定
       - name:  Extract yyyymm from Current Date in GMT
