--- a/.github/workflows/awsPush.yml
+++ b/.github/workflows/awsPush.yml
@@ -10,22 +10,19 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 0 # リポジトリの完全な履歴を取得
-          
-      - name: Configure AWS CLI
-     　 run: |
-        aws configure set aws_access_key_id ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws configure set aws_secret_access_key ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws configure set default.region ap-northeast-1    
 
-      # UTC（協定世界時）時間で現在の日付からyyyymmを動的に設定
-      - name:  Extract yyyymm from Current Date in GMT
+      # ロンドン時間で現在の日付からyyyymmを動的に設定
+      - name: Extract yyyymm from Current Date in GMT
         run: echo "yyyymm=$(date +'%Y%m' --utc)" >> $GITHUB_ENV
 
-      # AWS CLIの設定とS3への新しいファイルのアップロード
+      # AWS CLIの設定
+      - name: Configure AWS CLI
+        run: |
+          aws configure set aws_access_key_id ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws configure set aws_secret_access_key ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws configure set default.region ap-northeast-1
+
+      # AWS S3への新しいファイルのアップロード
       - name: Upload New Files to AWS S3
         run: |
           aws s3 sync --exact-timestamps --size-only ./html-pickup_${{ env.yyyymm }} s3://html-pickup/${{ env.yyyymm }}
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_REGION: "ap-northeast-1"
