--- a/.github/workflows/awsPush.yml
+++ b/.github/workflows/awsPush.yml
@@ -15,12 +15,15 @@ jobs:
       - name: Extract yyyymm from Current Date in GMT
         run: echo "yyyymm=$(date +'%Y%m' --utc)" >> $GITHUB_ENV
 
-      # AWS CLIの設定
-      - name: Configure AWS CLI
-        run: |
-          aws configure set aws_access_key_id ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws configure set aws_secret_access_key ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws configure set default.region ap-northeast-1
+# AWS CLIの設定
+- name: Configure AWS CLI
+  run: |
+    aws configure set aws_access_key_id ${{ secrets.AWS_ACCESS_KEY_ID }}
+    aws configure set aws_secret_access_key ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+    aws configure set default.region ap-northeast-1
+  env:
+    AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+    AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
       # AWS S3への新しいファイルのアップロード
       - name: Upload New Files to AWS S3
