--- a/.github/workflows/html-mediaALL_a.yml
+++ b/.github/workflows/html-mediaALL_a.yml
@@ -1,47 +1,31 @@
-name: html-mediaALL_a
+name: AWS S3 Upload MediaALL Files
 
-on:
-  schedule:
-    - cron: "0 2 * * *" # 毎日02時に実行
-  workflow_dispatch:
+on: push
 
 jobs:
-  scrape:
+  publish:
     runs-on: ubuntu-latest
+    env:
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      AWS_REGION: "ap-northeast-1"
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
+      - name: Checkout
+        uses: actions/checkout@v2
         with:
-          python-version: '3.9'
-      - name: Create directory
-        run: |
-          current_month=$(date +'%Y%m')
-          current_week=$(date +'%Y_%W') # 1-51
-          day_offset=$(( 7 - current_day_of_week ))
-          current_time=$(date +'%Y%m%d_%H%M')
-          folder_name="html-mediaALL_a_${current_week}"
-          mkdir -p $folder_name
-      
-      - name: Install required libraries
-        run: pip install notebook requests bs4 dropbox pandas
-      - name: Run scraper
-        run: python media_scraper_group_a_Ver.3.6.py
+          fetch-depth: 0 # リポジトリの完全な履歴を取得
 
-      - name: Set Git Config
-        run: |
-          git config user.name "Automated"
-          git config user.email "actions@users.noreply.github.com"
-        working-directory: ${{ github.workspace }}
+      # ロンドン時間で現在の日付からyyyymmを動的に設定
+      - name: Extract yyyymm from Current Date in GMT
+        run: echo "yyyymm=$(date +'%Y%m' --utc)" >> $GITHUB_ENV
 
-      # リモートリポジトリの変更を取り込む
-      - name: Pull remote changes
-        run: git pull origin main
-        working-directory: ${{ github.workspace }}
+      # 現在の週番号を取得
+      - name: Extract current week number
+        run: echo "current_week=$(date +'%U' --utc)" >> $GITHUB_ENV
 
-      # CSVファイルをコミットしてプッシュ
-      - name: Commit and push csv files
+      # AWS S3への新しいファイルのアップロード
+      - name: Upload New Files to AWS S3
         run: |
-          git add .
-          git commit -m "Update csv files - $(date +'%Y-%m-%d')"
-          git push
-        working-directory: ${{ github.workspace }}
+          for letter in {a..h}; do
+            aws s3 sync --exact-timestamps --size-only ./html_mediaALL_${letter}_${{ env.yyyymm }}_${{ env.current_week }} s3://html-media-all/${{ env.yyyymm }}
+          done
