--- a/.github/workflows/html-mediaALL.yml
+++ b/.github/workflows/html-mediaALL.yml
@@ -27,5 +27,5 @@ jobs:
       - name: Upload New Files to AWS S3
         run: |
           for letter in {a..h}; do
-            aws s3 sync --exact-timestamps --size-only ./html_mediaALL_${letter}_${{ env.yyyymm }}_${{ env.current_week }} s3://html-media-all/${{ env.yyyymm }}
+            aws s3 sync --exact-timestamps --size-only ./html_mediaALL_${letter}_${{ env.yyyymm }}_${{ env.current_week }} s3://html-media-all/${{ env.yyyymm }}_${{ env.current_week }}
           done
