--- a/.github/workflows/html-mediaALL_b.yml
+++ b/.github/workflows/html-mediaALL_b.yml
@@ -2,7 +2,7 @@ name: html-mediaALL_b
 
 on:
   schedule:
-    - cron: "0 3 * * *" # 毎日03時に実行
+    - cron: "0 3 */2 * *" # 毎日03時に実行
   workflow_dispatch:
 
 jobs:
