--- a/.github/workflows/html-mediaALL_g.yml
+++ b/.github/workflows/html-mediaALL_g.yml
@@ -2,7 +2,7 @@ name: html-mediaALL_g
 
 on:
   schedule:
-    - cron: "0 8 * * *" # 毎日08時に実行
+    - cron: "0 8 */2 * *" # 毎日08時に実行
   workflow_dispatch:
 
 jobs:
